    In later versions we will replace this notice with an error.
  - Rewrite of the reorder pages stuff to use jquery
    - People with custom admin themes may need to make changes, to ensure that the parent method for GetHeaderHTML() is called and
      possibly not override the getHeaderJavascript() method.
 
Theme Manager
  - Now handles attached images much better.

Installer
  - Fixes method conflicts between the installer and the upgrade routine.
    (may be a few addmes yet that have to be added to the core lang stuff).
  - Fixes module install stuff
  - Now asks for the timezone

MenuManager
  - image and thumbnail fields now output absolute URLS.
  - Adds the ability to cache the menumanager output into uniquely named cache files
  - Adds the nocache parameter. 

News:
  - Adds support for custom urls for each news article

TinyMCE:
  - Major update to this module, now in version 2.8.0
  - Fixed issue with double alias in the URL, when 'internal' is used for url_rewriting.
  - Rewrote test-area
  - Added an option to avoid Tiny's linkconversion, makes {smarty} in urls possible
  - Added an optional addition to the output of the CMSLinker, both in selflink or href method
  - Removed last non-cms entrypoint, filepicker
  - Imageuploading now honers the site-thumbnailsize setting
  - Uploadin non-images when in imageselector now works
  - Generation thumbnails when uploading images right after installation fixed
  - Updated to Tiny 3.3.9.2
  

Version 1.8.2 - Toliara
-----------------------------
Reverted:
  - Put the use_hierarchy config option back in for backwards compatibility
    with upgrades. This may go away in the future, as it doesn't allow for
    modules to have pretty URLs, but we'll have a proper workaround.

Fixes:
  - #5206 Using variable $this in translation.functions.php
  - #5198 German adaption in function.cms_selflink.php
  - #2215 Form Input Type of Password should have an ID attribute
  - #4834 Add an ID attribute to the form hidden tag